# fortunes

./: .gitignore  .vercelignore  AGENTS.md  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.codex/agents/: ai-diagnosis-mock-engineer.toml  domain-product-owner.toml
.codex/skills/manhole-backend-api-engineer/: SKILL.md
.codex/skills/manhole-code-review/: SKILL.md
.codex/skills/manhole-database-designer/: SKILL.md
.codex/skills/manhole-demo-prd/: SKILL.md
.codex/skills/manhole-devops-local-runner/: SKILL.md
.codex/skills/manhole-diagnosis-mock/: SKILL.md
.codex/skills/manhole-frontend-demo-engineer/: SKILL.md
.codex/skills/manhole-qa-validation/: SKILL.md
.codex/skills/manhole-solution-architecture/: SKILL.md
.codex/skills/manhole-ui-ux-demo-designer/: SKILL.md
apps/web/: package.json
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
apps/web/src/components/: app-shell.tsx  backend-status-banner.tsx  create-acceptance-button.tsx  create-plan-button.tsx  diagnosis-runner.tsx  (+7 more)
docs/: DELIVERY_ROADMAP.md  solution1.md
references/: acceptance-criteria.md  api-contract-draft.md  data-model-draft.md  demo-requirements.md  domain-glossary.md  resource-inventory.md
scripts/: check-demo.sh  start-backend.sh  start-frontend.sh
services/api/app/: dependencies.py  diagnosis_engine.py  errors.py  main.py  middleware.py  schemas.py  seed.py  store.py  workflow.py
tests/api/: test_api.py  test_diagnosis_engine.py
tests/e2e/: README.md  local_demo_smoke.py  playwright_demo_flow.py
(+12 files in other folders)
