[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manhole-demo-api"
version = "0.1.0"
description = "Local FastAPI backend for the 井周智修 MVP demo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "playwright>=1.48,<2.0",
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/api"]
pythonpath = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["services*"]
